--- a/week_2_in_class.qmd
+++ b/week_2_in_class.qmd
@@ -10,7 +10,7 @@ By the end of this session, you will be able to:
 4.  **Apply** AidData's visual style using the aiddataviz package
 5.  **Use** AI tools effectively to assist with both exploration and polish
 
-::: {.column-page}
+::: column-page
 {{< video https://youtu.be/Wst7I1-2bNQ>}}
 :::
 
@@ -48,22 +48,23 @@ By the end of this session, you will be able to:
     -   Key takeaways
     -   Additional resources
     -   Preview of next week
-    
-::: {.callout-tip}
+
+::: callout-tip
 ### Why This Matters for TUFF Analysis
+
 **Exploratory Visualization**
 
-- TUFF data is complex and often messy
-- Visual exploration helps spot patterns that spreadsheets might miss
-- Quick iteration helps generate hypotheses about Chinese lending behavior
-- Visual thinking can reveal outliers that need deeper investigation
+-   TUFF data is complex and often messy
+-   Visual exploration helps spot patterns that spreadsheets might miss
+-   Quick iteration helps generate hypotheses about Chinese lending behavior
+-   Visual thinking can reveal outliers that need deeper investigation
 
 **Professional Visualization**
 
-- Turn insights into compelling evidence for reports and blogs
-- Create consistent, branded graphics that build AidData's reputation
-- Move efficiently from analysis to publication
-- Tell clear stories about Chinese development finance
+-   Turn insights into compelling evidence for reports and blogs
+-   Create consistent, branded graphics that build AidData's reputation
+-   Move efficiently from analysis to publication
+-   Tell clear stories about Chinese development finance
 
 The skills you're learning today directly support AidData's mission of bringing transparency to Chinese overseas development finance.
 :::
@@ -413,7 +414,7 @@ This exploratory process has revealed several interesting patterns:
 3.  There are some notable outliers worth investigating
 4.  Regional patterns exist within income groups
 
-Not all exploratory analysis yields profound implications. It's valuable nevertheless. 
+Not all exploratory analysis yields profound implications. It's valuable nevertheless.
 
 ### What Questions Does This Raise?
 
@@ -447,48 +448,50 @@ If you find patterns worth sharing:
 
 Let's explore the distributions of key variables in our Chinese development finance data. We'll use histograms and box plots to understand both overall patterns and how they vary across groups.
 
-::: {.callout-tip}
+::: callout-tip
 ## Exploring Distributions
 
 When examining a variable's distribution, it's helpful to:
 
-1. Look at the overall shape first (histogram)
-2. Then compare across groups (box plots)
-3. Consider whether you need to transform scales (often for financial data)
+1.  Look at the overall shape first (histogram)
+2.  Then compare across groups (box plots)
+3.  Consider whether you need to transform scales (often for financial data)
 :::
 
 Explore these two key variables:
 
-1. **Weighted Interest Rates**
-  - Start with overall distribution
-  - Compare across regions
-  - Compare across income groups
-  - Consider: What patterns do you see? Any surprises?
+1.  **Weighted Interest Rates**
 
-2. **Total Commitments**
-  - Look at the overall distribution
-  - Try with and without log scale
-  - Look at regional patterns
-  - Examine patterns by income group
-  - Think about: Where is China lending the most? Least?
+-   Start with overall distribution
+-   Compare across regions
+-   Compare across income groups
+-   Consider: What patterns do you see? Any surprises?
 
-::: {.callout-note}
+2.  **Total Commitments**
+
+-   Look at the overall distribution
+-   Try with and without log scale
+-   Look at regional patterns
+-   Examine patterns by income group
+-   Think about: Where is China lending the most? Least?
+
+::: callout-note
 ## Useful geoms for Distribution Analysis
 
-- `geom_histogram()`: Overall shape of distribution
-- `geom_boxplot()`: Compare distributions across groups
-- `geom_density()`: Smooth version of histogram
-- `geom_violin()`: Combination of density and box plot
+-   `geom_histogram()`: Overall shape of distribution
+-   `geom_boxplot()`: Compare distributions across groups
+-   `geom_density()`: Smooth version of histogram
+-   `geom_violin()`: Combination of density and box plot
 
 Try different ones to see which reveals patterns best!
 :::
 
 Remember:
 
-- Make lots of charts
-- Try different visualization approaches
-- Note interesting patterns
-- Generate questions for further research
+-   Make lots of charts
+-   Try different visualization approaches
+-   Note interesting patterns
+-   Generate questions for further research
 
 Share what you discover with your colleagues - sometimes fresh eyes see new patterns!
 
@@ -498,25 +501,25 @@ Share what you discover with your colleagues - sometimes fresh eyes see new patt
 
 In the first part of this class, we explored how to use visualization to understand patterns in our data. Now we'll learn how to transform those exploratory visualizations into polished, professional graphics suitable for reports and presentations.
 
-::: {.callout-warning}
+::: callout-warning
 ## Help Shape aiddataviz
 
 The `aiddataviz` package is brand new and actively evolving. While it's already useful for creating AidData-styled visualizations:
 
-- Expect the package to change significantly in coming weeks
-- Some features may be added or refined
-- Documentation will be expanded
-- Installation processes will be streamlined
+-   Expect the package to change significantly in coming weeks
+-   Some features may be added or refined
+-   Documentation will be expanded
+-   Installation processes will be streamlined
 
-**Your Input Matters!** 
+**Your Input Matters!**
 
 We're actively seeking feedback from AidData staff & communications team to make this package truly useful for your work. We'd love your input on:
 
-- Color palettes that work well for your analysis
-- Font choices that match AidData's brand
-- Output formats you commonly need
-- Common visualization types you create
-- Features that would save you time
+-   Color palettes that work well for your analysis
+-   Font choices that match AidData's brand
+-   Output formats you commonly need
+-   Common visualization types you create
+-   Features that would save you time
 
 This is your chance to help build a tool that makes your work easier!
 :::
@@ -529,10 +532,10 @@ Let's work through transforming an exploratory visualization into something publ
 
 This visualization effectively communicates several key pieces of information:
 
-- Total lending volumes over time
-- Composition of lending by flow class
-- Key periods in the Belt and Road Initiative
-- Clear source attribution and professional styling
+-   Total lending volumes over time
+-   Composition of lending by flow class
+-   Key periods in the Belt and Road Initiative
+-   Clear source attribution and professional styling
 
 ### Building Our Publication-Ready Visualization
 
@@ -554,9 +557,9 @@ gcdf_yearly_flows |>
     ) 
   ) + 
   geom_col() 
-``` 
+```
 
-::: {.callout-note}
+::: callout-note
 This basic structure already shows our key information - lending volumes over time by flow class. Now we'll enhance it step by step.
 :::
 
@@ -583,21 +586,16 @@ p <- gcdf_yearly_flows |>
   geom_col() +
   labs(fill = "")
 p
-``` 
+```
 
-::: {.callout-note}
-Factor Reordering: Static vs Time Series Data
-The forcats package gives us two key tools for reordering factors:
-`fct_reorder()`: Best for static data (like sorted bar charts)
+::: callout-note
+Factor Reordering: Static vs Time Series Data The forcats package gives us two key tools for reordering factors: `fct_reorder()`: Best for static data (like sorted bar charts)
 
-Orders categories by a single value
-Perfect when you want to rank things from highest to lowest
+Orders categories by a single value Perfect when you want to rank things from highest to lowest
 
 `fct_reorder2()`: Designed specifically for time series data
 
-Takes both time and value into account
-Creates stable ordering over time
-Particularly useful for stacked charts like ours
+Takes both time and value into account Creates stable ordering over time Particularly useful for stacked charts like ours
 
 Think: "Static = `fct_reorder()`, Time Series = `fct_reorder2()`"
 :::
@@ -625,15 +623,16 @@ p2 <- p +
     panel.grid.major.x = element_blank()  # Remove vertical gridlines
   )
 p2
-``` 
+```
 
-::: {.callout-note}
+::: callout-note
 ## AidData's Color System
+
 The colors we're using come from [William & Mary's brand guidelines](https://brand.wm.edu/index.php/university-colors/) and have been chosen to:
 
-- Ensure readability
-- Maintain institutional identity
-- Work well together in various combinations
+-   Ensure readability
+-   Maintain institutional identity
+-   Work well together in various combinations
 :::
 
 #### Step 4: Add Direct Labels
@@ -665,7 +664,7 @@ p3 <- p2 +
 p3
 ```
 
-::: {.callout-tip}
+::: callout-tip
 Direct labels eliminate the need for readers to look back and forth between the visualization and a legend, making the chart easier to understand quickly.
 :::
 
@@ -725,130 +724,126 @@ p5 <- p4 +
   )
 p5
 ```
+
 Let's compare it to the original:
 
 ![](images/week2_reboot_chart.png)
 
-Looks pretty close! That's something you can easily learn to do well. 
+Looks pretty close! That's something you can easily learn to do well.
 
 If we wanted to, we could take a few more steps:
 
-- draw lines from our labels to the columns
-- make the axis titles lighter to draw attention away from them
+-   draw lines from our labels to the columns
+-   make the axis titles lighter to draw attention away from them
 
-Once you get to that level, it's worth talking with your communications team. They are professionals. 
+Once you get to that level, it's worth talking with your communications team. They are professionals.
 
 ### Key Elements of Professional Visualizations
 
 Our final visualization incorporates several key elements that make it publication-ready:
 
-1. **Clear Visual Hierarchy**
-   - Ordered stacking of categories
-   - Direct labels instead of legend
-   - Removal of unnecessary grid lines
+1.  **Clear Visual Hierarchy**
+    -   Ordered stacking of categories
+    -   Direct labels instead of legend
+    -   Removal of unnecessary grid lines
+2.  **Consistent Branding**
+    -   AidData color palette
+    -   Professional typography
+    -   Clean, minimal theme
+3.  **Contextual Information**
+    -   Clear title and subtitle
+    -   Important period markers
+    -   Proper source attribution
+4.  **Readable Formatting**
+    -   Well-formatted axis labels
+    -   Appropriate scale limits
+    -   Balanced use of space
 
-2. **Consistent Branding**
-   - AidData color palette
-   - Professional typography
-   - Clean, minimal theme
-
-3. **Contextual Information**
-   - Clear title and subtitle
-   - Important period markers
-   - Proper source attribution
-
-4. **Readable Formatting**
-   - Well-formatted axis labels
-   - Appropriate scale limits
-   - Balanced use of space
-
-::: {.callout-tip}
+::: callout-tip
 ## Creating Your Own Publication Graphics
 
 Create a checklist for your visualizations:
 
-1. Is the main message immediately clear?
-2. Are all elements properly labeled?
-3. Is the styling consistent with your organization's brand?
-4. Have you removed unnecessary visual elements?
-5. Is the source clearly attributed?
+1.  Is the main message immediately clear?
+2.  Are all elements properly labeled?
+3.  Is the styling consistent with your organization's brand?
+4.  Have you removed unnecessary visual elements?
+5.  Is the source clearly attributed?
 :::
 
 ## Resources for Data Visualization
 
 ### Essential References
 
-1. **[ggplot2 Documentation](https://ggplot2.tidyverse.org/index.html)**
-   - Comprehensive function reference
-   - Clear examples for each feature
-   - Best place to look up specific details
-
-2. **[R for Data Science (2e)](https://r4ds.hadley.nz/visualize)**
-   - Section 2 focuses entirely on visualization
-   - Written by ggplot2's creator, Hadley Wickham
-   - Perfect balance of theory and practice
-   - Free online!
+1.  [**ggplot2 Documentation**](https://ggplot2.tidyverse.org/index.html)
+    -   Comprehensive function reference
+    -   Clear examples for each feature
+    -   Best place to look up specific details
+2.  [**R for Data Science (2e)**](https://r4ds.hadley.nz/visualize)
+    -   Section 2 focuses entirely on visualization
+    -   Written by ggplot2's creator, Hadley Wickham
+    -   Perfect balance of theory and practice
+    -   Free online!
 
 ### Finding Inspiration & Solutions
 
-1. **[ggplot2 Extensions Gallery](https://exts.ggplot2.tidyverse.org/gallery/)**
-   - Browse specialized visualization packages
-   - Find new ways to present your data
-   - All compatible with ggplot2
+1.  [**ggplot2 Extensions Gallery**](https://exts.ggplot2.tidyverse.org/gallery/)
+    -   Browse specialized visualization packages
+    -   Find new ways to present your data
+    -   All compatible with ggplot2
+2.  [**R Graph Gallery**](https://r-graph-gallery.com/)
+    -   Examples of many chart types
+    -   Step-by-step instructions
+    -   Code you can adapt
 
-2. **[R Graph Gallery](https://r-graph-gallery.com/)**
-   - Examples of many chart types
-   - Step-by-step instructions
-   - Code you can adapt
-
-::: {.callout-tip}
+::: callout-tip
 ## Quick Tip
+
 When you need to create a new type of visualization:
 
-1. Check the R Graph Gallery for examples
-2. Look for relevant ggplot2 extensions
-3. Ask AI tools to help adapt example code
+1.  Check the R Graph Gallery for examples
+2.  Look for relevant ggplot2 extensions
+3.  Ask AI tools to help adapt example code
 :::
 
 ### Advanced Learning
 
-1. **[Storytelling with Data](https://www.storytellingwithdata.com/)**
-   - Beyond technical skills
-   - Focus on communication
-   - Key concepts:
-     - Understanding context and audience
-     - Choosing the right visualization
-     - Eliminating chart clutter
-     - Using design principles
-     - Building effective narratives
+1.  [**Storytelling with Data**](https://www.storytellingwithdata.com/)
+    -   Beyond technical skills
+    -   Focus on communication
+    -   Key concepts:
+        -   Understanding context and audience
+        -   Choosing the right visualization
+        -   Eliminating chart clutter
+        -   Using design principles
+        -   Building effective narratives
+2.  [**Graphic Design with ggplot2**](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/)
+    -   💫 **Highly Recommended!**
+    -   Comprehensive workshop materials
+    -   Free online access
+    -   Topics include:
+        -   Advanced ggplot2 techniques
+        -   Color theory and typography
+        -   Layout and composition
+        -   Creating publication-quality graphics
 
-2. **[Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/)**
-   - 💫 **Highly Recommended!**
-   - Comprehensive workshop materials
-   - Free online access
-   - Topics include:
-     - Advanced ggplot2 techniques
-     - Color theory and typography
-     - Layout and composition
-     - Creating publication-quality graphics
-
-::: {.callout-note}
+::: callout-note
 ## Learning Path Suggestion
 
-1. Start with R4DS for foundations
-2. Use the galleries for inspiration
-3. Reference ggplot2 docs for details
-4. Move to advanced resources when ready
+1.  Start with R4DS for foundations
+2.  Use the galleries for inspiration
+3.  Reference ggplot2 docs for details
+4.  Move to advanced resources when ready
 :::
 
 ### Practice Exercise
 
 Take one of the exploratory visualizations you created today and:
 
-1. Find a similar example in the R Graph Gallery
-2. Identify ways to enhance it
-3. Use the ggplot2 documentation to implement improvements
-4. Share your before/after with colleagues
+1.  Find a similar example in the R Graph Gallery
+2.  Identify ways to enhance it
+3.  Use the ggplot2 documentation to implement improvements
+4.  Share your before/after with colleagues
 
 Remember: Great visualization is an iterative process. Start simple, then enhance step by step.
 
@@ -858,22 +853,25 @@ Remember: Great visualization is an iterative process. Start simple, then enhanc
 
 Let's look back at what we've accomplished in just 90 minutes:
 
-1. **Mastered Two Types of Visualization**
-  - Created exploratory visualizations to understand data
-  - Transformed rough charts into publication-ready graphics
-  - Learned when to use each approach
+1.  **Mastered Two Types of Visualization**
 
-2. **Used Visualization for Discovery**
-  - Layered multiple variables into single charts
-  - Discovered patterns in Chinese development finance
-  - Generated new questions for research
-  - Learned to use aesthetic mappings effectively
+-   Created exploratory visualizations to understand data
+-   Transformed rough charts into publication-ready graphics
+-   Learned when to use each approach
 
-3. **Created Professional Graphics**
-  - Applied AidData's visual identity
-  - Built complex visualizations step by step
-  - Used the aiddataviz package for consistent styling
-  - Added professional touches like annotations and labels
+2.  **Used Visualization for Discovery**
+
+-   Layered multiple variables into single charts
+-   Discovered patterns in Chinese development finance
+-   Generated new questions for research
+-   Learned to use aesthetic mappings effectively
+
+3.  **Created Professional Graphics**
+
+-   Applied AidData's visual identity
+-   Built complex visualizations step by step
+-   Used the aiddataviz package for consistent styling
+-   Added professional touches like annotations and labels
 
 Most importantly, you now have a toolkit for both exploring data and communicating your findings effectively. While mastering data visualization takes time and practice, you have working examples you can build upon and adapt for your own analysis needs.
 
@@ -883,60 +881,63 @@ Let's review what we set out to achieve:
 
 ✅ **Create exploratory visualizations**
 
-- You've learned to build layered visualizations
-- You know how to map multiple variables to aesthetics
-- You can use faceting to compare across groups
+-   You've learned to build layered visualizations
+-   You know how to map multiple variables to aesthetics
+-   You can use faceting to compare across groups
 
 ✅ **Layer aesthetic mappings**
 
-- You understand how different mappings reveal patterns
-- You can combine multiple variables in one visualization
-- You know how to choose effective aesthetic mappings
+-   You understand how different mappings reveal patterns
+-   You can combine multiple variables in one visualization
+-   You know how to choose effective aesthetic mappings
 
 ✅ **Transform exploratory charts into publication graphics**
 
-- You can follow the 6-step process for polishing charts
-- You understand the elements of professional visualization
-- You can use aiddataviz for consistent styling
+-   You can follow the 6-step process for polishing charts
+-   You understand the elements of professional visualization
+-   You can use aiddataviz for consistent styling
 
 ✅ **Apply AidData's visual identity**
 
-- You know how to use AidData's color palettes
-- You can apply consistent styling with theme_aiddata()
-- You understand the importance of visual consistency
+-   You know how to use AidData's color palettes
+-   You can apply consistent styling with theme_aiddata()
+-   You understand the importance of visual consistency
 
 ✅ **Use AI tools effectively**
 
-- You've seen how AI can help with visualization code
-- You know what questions to ask AI assistants
-- You understand how to verify AI suggestions
+-   You've seen how AI can help with visualization code
+-   You know what questions to ask AI assistants
+-   You understand how to verify AI suggestions
 
 ### Resources for Continued Learning
 
 Remember, you have several resources available:
 
-- Our course textbook and examples
-- The comprehensive resources we just covered
-- The aiddataviz package (though remember it's still evolving!)
-- AI tools to help with coding and troubleshooting
+-   Our course textbook and examples
+-   The comprehensive resources we just covered
+-   The aiddataviz package (though remember it's still evolving!)
+-   AI tools to help with coding and troubleshooting
 
 ### Next Steps
 
-1. **Practice with Your Own Data**
-  - Try creating exploratory visualizations of your current projects
-  - Apply the 6-step process to polish important charts
-  - Use AI tools to help when you get stuck
+1.  **Practice with Your Own Data**
 
-2. **Prepare for Next Week**
-  - We'll dive into data transformation
-  - Think about what patterns you'd like to investigate
-  - Consider how visualization and transformation work together
+-   Try creating exploratory visualizations of your current projects
+-   Apply the 6-step process to polish important charts
+-   Use AI tools to help when you get stuck
 
-3. **Get Help When Needed**
-  - Use AI tools for code help
-  - Reference the resources we covered
-  - Ask questions in our course forum
-  - Share challenges and solutions with colleagues
+2.  **Prepare for Next Week**
+
+-   We'll dive into data transformation
+-   Think about what patterns you'd like to investigate
+-   Consider how visualization and transformation work together
+
+3.  **Get Help When Needed**
+
+-   Use AI tools for code help
+-   Reference the resources we covered
+-   Ask questions in our course forum
+-   Share challenges and solutions with colleagues
 
 Remember: Learning data visualization is a journey. Focus on understanding the fundamentals and building your skills step by step. You don't need to memorize everything - knowing where to find help is often more important than memorizing syntax.
 
